<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/delete"
                android:title="@string/delete_channel" />
            <item
                android:id="@+id/leave"
                android:title="@string/leave_channel" />
            <item
                android:id="@+id/update_channel_name"
                android:title="@string/update_channel_name" />
            <item
                android:id="@+id/member_list"
                android:title="@string/members_list" />
            <item
                android:id="@+id/invite"
                android:title="@string/invite_members" />
            <item
                android:id="@+id/show_pinned_messages"
                android:title="@string/show_pinned_messages" />
            <item
                android:id="@+id/show_all_messages"
                android:title="@string/show_all_messages" />
        </menu>
    </item>
</menu>